--- a/arch/arm/boot/dts/msm8610-moto-common.dtsi
+++ b/arch/arm/boot/dts/msm8610-moto-common.dtsi
@@ -189,6 +189,24 @@
 	};
 };
 
+	firmware: firmware {
+		android {
+			compatible = "android,firmware";
+			fstab {
+				compatible = "android,fstab";
+				system {
+					compatible = "android,system";
+					dev = "/dev/block/platform/msm_sdcc.1/by-name/system";
+					type = "ext4";
+					mnt_flags = "ro,barrier=1,noatime";
+					fsmgr_flags = "wait";
+					status = "ok";
+				};
+
+			};
+		};
+	};
+
 &qsecom_mem {
 	linux,contiguous-region;
 	reg = <0 0x600000>;
