ARM: dts: msm: Early mount of system partition for msm8610-moto
Add support to early mount system partition so that system modules
can be loaded during early init.

Change-Id: Ib9a3e5dca8923a900f76b276ed05b34f45a84063
Signed-off-by: Swetha Chikkaboraiah <schikk@codeaurora.org>

--- a/arch/arm/boot/dts/msm8610-moto-common.dtsi
+++ b/arch/arm/boot/dts/msm8610-moto-common.dtsi
@@ -22,6 +22,23 @@
 	model = "Motorola QC-MSM8610";
 	compatible = "qcom,msm8610-moto", "qcom,msm8610";
 
+	firmware: firmware {
+		android {
+			compatible = "android,firmware";
+			fstab {
+				compatible = "android,fstab";
+				system {
+					compatible = "android,system";
+					dev = "/dev/block/platform/msm_sdcc.1/by-name/system";
+					type = "ext4";
+					mnt_flags = "ro,barrier=1,discard";
+					fsmgr_flags = "wait";
+					status = "ok";
+				};
+			};
+		};
+	};
+
 	memory {
 		reg = <0x00000000 0x00000000>,
 		      <0x00000000 0x00000000>;
