--- a/arch/arm/configs/lineage_otus_defconfig
+++ b/arch/arm/configs/lineage_otus_defconfig
@@ -41,9 +41,9 @@ CONFIG_IRQ_WORK=y
 #
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
-CONFIG_CROSS_COMPILE="-oreo"
-CONFIG_LOCALVERSION=""
-#CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_CROSS_COMPILE=""
+CONFIG_LOCALVERSION="-Oreo"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
